fix overflow

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,6 @@
 .hero {
-  /* min-height: 90vh; */
+  height: 95vh;
+  overflow: hidden;
 }
 .hero-img {
   img {
